--- a/rocketseat/discover_trilha-fundamentar/NodeJS/package.json
+++ b/rocketseat/discover_trilha-fundamentar/NodeJS/package.json
@@ -4,7 +4,7 @@
   "description": "Meu primeiro pacote Node.",
   "main": "console.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node console.js"
   },
   "keywords": [
     "learning",
@@ -13,8 +13,5 @@
     "nodejs"
   ],
   "author": "Augusto",
-  "license": "ISC",
-  "dependencies": {
-    "cfonts": "^3.1.0"
-  }
+  "license": "ISC"
 }
